# GalaxySim

./: CMakeLists.txt  README.md  main.cpp
src/render/: RenderLayer.cpp  RenderLayer.h
src/sim/: Galaxy.cpp  Galaxy.h  Simulation.cpp  Simulation.h  Star.cpp  Star.h
src/utils/: Vec3.cpp  Vec3.h
